--- a/index.css
+++ b/index.css
@@ -1,27 +1,52 @@
 @import "./styles/classes.css"; /* do not remove */
 @import "./styles/base.css"; /* do not remove */
 
-/* Header */
-header {
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr;
+@media (min-width: 800px) {
+  header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+  }
+
+  .bg-pink {
+    display: grid;
+    grid-template-rows: max-content max-content;
+    grid-auto-columns: auto;
+  }
+
+  .bg-pink > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+  }
+
+  #grid {
+    display: grid;
+    grid-template-rows: auto 250px 250px 250px 250px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1em;
+  }
+
+  #grid > * {
+    padding: 1em;
+  }
+
+  #grid h2 {
+    grid-column: 1 / span 3;
+    text-align: right;
+    font-size: 6em;
+  }
+
+  #grid p:first-of-type {
+    grid-column: 1 / span 2;
+  }
+
+  #grid div {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 3;
+  }
 }
 
-header > div {
-  display: grid;
-  grid-template-rows: max-content max-content;
-  grid-template-columns: auto;
-}
-
-header > div > div {
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr;
-  gap: 2em;
-}
-
-/* Section - Flexbox */
 #flexbox {
   display: flex;
   flex-direction: column;
@@ -32,82 +57,12 @@ header > div > div {
   justify-content: center;
   align-items: center;
 }
-
 #flexbox h2 {
   font-size: 6em;
 }
-
-/* Section - Grid */
-#grid {
-  display: grid;
-  grid-template-rows: auto 250px 250px 250px 250px;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-#grid > * {
-  padding: 1em;
-}
-
-#grid h2 {
-  grid-column: span 3;
-  text-align: right;
-  font-size: 6em;
-}
-
-#grid p:first-child {
-  grid-column: span 2;
-}
-
-#grid div {
-  grid-column: 2 / span 2;
-  grid-row: 3 / span 3;
-}
-
-/* Footer */
-footer {
-  display: flex;
-}
-
-footer > div {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (min-width: 800px) {
-  #grid {
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  #grid > * {
-    padding: 1em;
-  }
-
-  #grid h2 {
-    grid-column: span 3;
-    text-align: right;
-    font-size: 6em;
-  }
-
-  #grid p:first-child {
-    grid-column: span 2;
-  }
-
-  #grid div {
-    grid-column: 2 / span 2;
-    grid-row: 3 / span 3;
-  }
-  footer > div {
-    padding: 4em;
-    flex-direction: row;
-  }
-
-  footer > div img {
-    order: 1;
-  }
-
-  footer > div p {
-    margin-top: 0;
+@media only screen and (max-width: 800px) {
+  footer {
+    text-align: center;
   }
 }
 
